<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg">

    <LinearLayout
        android:id="@+id/frag_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/frag_tv_currenttemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curren"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/frag_tv_city"
                style="@style/todaytext"
                android:layout_below="@id/frag_tv_currenttemp"
                android:text="@string/city" />

            <TextView
                android:id="@+id/frag_tv_condition"
                style="@style/todaytext"
                android:layout_below="@id/frag_tv_city"
                android:text="@string/condition" />

            <TextView
                android:id="@+id/frag_tv_date"
                style="@style/todaytext"
                android:layout_below="@id/frag_tv_condition"
                android:layout_marginTop="20dp"
                android:text="@string/dates" />

            <TextView
                android:id="@+id/frag_tv_wind"
                style="@style/todaytext"
                android:layout_below="@id/frag_tv_date"
                android:text="@string/wind" />

            <TextView
                android:id="@+id/frag_tv_intercept"
                android:layout_width="2dp"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/frag_tv_wind"
                android:background="#000000" />

            <TextView
                android:id="@+id/frag_tv_leftTemperature"
                style="@style/todaytext"
                android:layout_alignBottom="@id/frag_tv_wind"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@id/frag_tv_intercept"
                android:text="@string/_25_30" />

            <ImageView
                android:id="@+id/frag_iv_today"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_wb_sunny_black_24dp"
                android:contentDescription="@string/todo" />
        </RelativeLayout>
        <!--用来显示未来三天的天气情况-->
        <LinearLayout
            android:id="@+id/frag_center_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/flag"
            android:orientation="vertical"
            android:padding="10dp" />
        <!--  用于表示指数信息的线性布局-->
        <LinearLayout
            android:id="@+id/frag_center_exponent"
            style="@style/one">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"><!--加ID-->

                <TextView
                    android:id="@+id/frag_iv_dress"
                    style="@style/indextext"
                    android:drawableBottom="@mipmap/icon_cloth"
                    android:text="@string/dress" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/frag_iv_washcar"
                    style="@style/indextext"
                    android:drawableBottom="@mipmap/icon_car"
                    android:text="@string/car" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/frag_iv_cole"
                    style="@style/indextext"
                    android:drawableBottom="@mipmap/icon_ganmao"
                    android:text="@string/cole" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/frag_iv_sprot"
                    style="@style/indextext"
                    android:drawableBottom="@mipmap/icon_sport"
                    android:text="@string/sprot" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/frag_iv_rays"
                    style="@style/indextext"
                    android:drawableBottom="@mipmap/icon_light"
                    android:text="@string/rays" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"
                    android:contentDescription="@string/todo" />

                <TextView
                    style="@style/indextext"
                    android:contentDescription="@string/todo" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/add_layout"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/flag"
            android:orientation="vertical"
            android:padding="10dp" />
    </LinearLayout>
</ScrollView>